frontend/src/features/permits/pages/Application/components/form/axleSpacingAndWeightsSection/components/AxleSpacingAndWeightsTable.scss
@import "../../../../../../../../themes/orbcStyles";

.axle-spacing-and-weights-table {
  .table-container {
    margin-top: 1.5rem;
    padding: 0;
    display: flex;
    align-items: start;
    gap: 1rem;
    overflow-x: auto;
  }
  
  .table {
    border-collapse: collapse;

    &__input {
      margin: 0;

      // Per-field policy failure outline (runAxleCalculation)
      &--fail {
        // NumberInput uses OutlinedInput; Autocomplete uses an outlined TextField internally.
        // Both render a <fieldset> for the outline.
        fieldset,
        .MuiOutlinedInput-notchedOutline {
          border: 2px solid $bc-red;
        }

        &:hover {
          fieldset,
          .MuiOutlinedInput-notchedOutline {
            border: 2px solid $bc-red;
          }
        }
      }

      &--select {
        min-width: 144px;
        div.autocomplete__textfield {
          .MuiInputBase-root {
            padding-right: 0;
          }
        }
      }
    }

    &__input-container {
      margin: 0;
    }

    &__cell {
      padding: 1rem;
      text-align: center;
      border: 1px solid $bc-border-grey;
      min-width: 5rem;
      max-width: 5rem;
    }
  }

  .column, .row {
    &__label {
      background-color: $bc-background-light-grey;
      border: 1px solid $bc-border-grey;
      padding: 1rem;
      text-align: start;
      font-weight: bold;
      font-size: 1rem;
      color: $bc-black;
      box-sizing: border-box;
      width: 175px;

      &:first-child {
        max-width: 106px;
      }

      &--fail {
        background-color: $bc-messages-red-background;
        color: $bc-red;
      }

      &--subtype {
        background-color: $bc-messages-blue-background;
        padding: 0.75rem 1rem;
      }
    }

    &__label-content {
      display: flex;
      align-items: center;
      gap: .75rem;
    }

    &__actions {
      display: inline-flex;
      align-items: center;
      gap: .5rem;
    }

    &__button {
      color: $bc-black;
      width: 1.5rem;
      height: 1.5rem;
      
      &--help {
        border: none;
        cursor: pointer;
        background-color: transparent;
        font-size: 1.5rem;
        transform: translateY(3px);
      }
      &--add, &--remove {
        border: 2px solid $bc-black;
        border-radius: .25rem;
        font-size: 1rem;

        &:hover, &:focus {
          background-color: $bc-border-grey;
          border: 2px solid $bc-black;
        }
      }
    }
  }

  &__legend {
    margin-top: 1.5rem;
    margin-bottom: 0;
  }

  .button-container {
    display: flex;
    gap: 1.5rem;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
  }
  
  .button {
    font-size: 1rem;
    padding: .5rem 1rem;
    box-shadow: none;
    min-width: fit-content;

    &:hover, &:focus {
      box-shadow: none; 
    }

    &--add {
      display: flex;
      align-items: center;
      gap: .5rem;
      margin-top: 1.5rem;
      color: $bc-black;
      border: 2px solid $bc-text-box-border-grey;

      &:hover, &:focus {
        background-color: $bc-background-light-grey;
        border: 2px solid $bc-text-box-border-grey;
      }
    }

    &--remove {
      border: 2px solid $bc-black;
      border-radius: 4px;

      &:hover, &:focus {
        background: $bc-border-grey;
      }
    }

    &--reset {
      color: $bc-black;
      background-color: $bc-background-light-grey;
      border: 2px solid $bc-background-light-grey;

      &:hover, &:focus {
        background-color: $bc-background-light-grey;
        border-color: $bc-text-box-border-grey;
      }
    }

    &--submit {
      padding: .5rem 2rem;
      font-weight: bold;
    }
  }

  .results {
    &__heading {
      color: $bc-black;
      margin-top: 0;
      margin-bottom: 1rem;
    }

    &__text {
      &--fail {
        color: $bc-red;
      }
      &--success {
        color: $bc-black;
        font-weight: bold;
        padding: .5rem 0;
      }
    }
  }
}

